# thesignal-escrow-solana

./: .gitignore  Anchor.toml  README.md  package.json  test-escrow.mjs  tsconfig.json
docs/: ARCHITECTURE.md  COMPLIANCE.md
frontend/: .env.example  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CreateDeal.tsx  DealDashboard.tsx  KycVerification.tsx  ReputationBadge.tsx  WalletProvider.tsx
frontend/src/components/ui/: Branding.tsx  Components.tsx
frontend/src/hooks/: useDealEscrow.ts  useFaucet.ts  useKycStatus.ts  useSolanaWallet.ts
frontend/src/idl/: signal_escrow.json  signal_escrow.ts  signal_kyc_hook.json
frontend/src/lib/: dealMetadata.ts  solana.ts
programs/signal-escrow/: Cargo.toml
programs/signal-escrow/src/: errors.rs  events.rs  lib.rs
programs/signal-escrow/src/instructions/: create_deal.rs  deposit.rs  dispute.rs  initialize.rs  mod.rs  refund.rs  release.rs  resolve.rs
programs/signal-escrow/src/state/: config.rs  deal.rs  mod.rs  reputation.rs
programs/signal-kyc-hook/: Cargo.toml
programs/signal-kyc-hook/src/: lib.rs
programs/signal-kyc-hook/src/instructions/: block_address.rs  init_extra_accounts.rs  mod.rs  record_travel_rule.rs  register_kyc.rs  transfer_hook.rs
programs/signal-kyc-hook/src/state/: kyc_status.rs  mod.rs  travel_rule.rs
scripts/: finish-devnet-setup.ts  register-kyc.mjs  setup-devnet.ts
tests/: signal-escrow.ts
