[package]
name = "signal-escrow"
version = "0.1.0"
description = "The Signal Escrow - Institutional Stablecoin Escrow on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "signal_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token-2022"] }
