[package]
name = "signal-kyc-hook"
version = "0.1.0"
description = "The Signal KYC Transfer Hook - Compliance layer for Token-2022"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "signal_kyc_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token-2022"] }
spl-transfer-hook-interface = "0.8.0"
spl-tlv-account-resolution = "0.8.1"
